--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "crounter"
 version = "0.1.0"
 authors = ["scriptandcompile <scriptandcompile@gmail.com>"]
 edition = "2018"
+description = "CLI tool for smart source code analytics."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
