--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ description = "CLI tool for smart source code analytics."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fs_extra = "1.1.0"
 clap = "2.33.0"
+ignore = "0.4"
